Conditional panel update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: biodiversityapp
-Title: What the Package Does (One Line, Title Case)
+Title: Map, time visualization and graphs for species 
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Gokhan",
